--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:33.249964Z",
-     "start_time": "2023-12-15T09:45:33.209923Z"
+     "end_time": "2023-12-15T10:11:57.233133Z",
+     "start_time": "2023-12-15T10:11:57.183224Z"
     }
    },
    "outputs": [],
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:33.250246Z",
-     "start_time": "2023-12-15T09:45:33.213557Z"
+     "end_time": "2023-12-15T10:11:57.245934Z",
+     "start_time": "2023-12-15T10:11:57.191141Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:33.367917Z",
-     "start_time": "2023-12-15T09:45:33.306873Z"
+     "end_time": "2023-12-15T10:11:57.354671Z",
+     "start_time": "2023-12-15T10:11:57.225245Z"
     }
    },
    "outputs": [
@@ -68,11 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:33.369059Z",
-     "start_time": "2023-12-15T09:45:33.365216Z"
+     "end_time": "2023-12-15T10:11:57.355115Z",
+     "start_time": "2023-12-15T10:11:57.352551Z"
     }
    },
    "outputs": [
@@ -96,11 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:33.374495Z",
-     "start_time": "2023-12-15T09:45:33.370087Z"
+     "end_time": "2023-12-15T10:11:57.359428Z",
+     "start_time": "2023-12-15T10:11:57.356232Z"
     }
    },
    "outputs": [],
@@ -114,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:34.130422Z",
-     "start_time": "2023-12-15T09:45:33.425782Z"
+     "end_time": "2023-12-15T10:11:58.087254Z",
+     "start_time": "2023-12-15T10:11:57.358877Z"
     }
    },
    "outputs": [
@@ -141,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:34.220580Z",
-     "start_time": "2023-12-15T09:45:34.127940Z"
+     "end_time": "2023-12-15T10:11:58.177095Z",
+     "start_time": "2023-12-15T10:11:58.085642Z"
     }
    },
    "outputs": [],
@@ -158,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:34.351209Z",
-     "start_time": "2023-12-15T09:45:34.233058Z"
+     "end_time": "2023-12-15T10:11:58.305217Z",
+     "start_time": "2023-12-15T10:11:58.214346Z"
     }
    },
    "outputs": [
@@ -184,11 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:34.495289Z",
-     "start_time": "2023-12-15T09:45:34.409630Z"
+     "end_time": "2023-12-15T10:11:58.444272Z",
+     "start_time": "2023-12-15T10:11:58.352821Z"
     }
    },
    "outputs": [
@@ -208,11 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:34.698119Z",
-     "start_time": "2023-12-15T09:45:34.542787Z"
+     "end_time": "2023-12-15T10:11:58.641919Z",
+     "start_time": "2023-12-15T10:11:58.503894Z"
     }
    },
    "outputs": [
@@ -232,11 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:34.699530Z",
-     "start_time": "2023-12-15T09:45:34.696354Z"
+     "end_time": "2023-12-15T10:11:58.643225Z",
+     "start_time": "2023-12-15T10:11:58.640406Z"
     }
    },
    "outputs": [
@@ -259,11 +259,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:34.704818Z",
-     "start_time": "2023-12-15T09:45:34.699984Z"
+     "end_time": "2023-12-15T10:11:58.647109Z",
+     "start_time": "2023-12-15T10:11:58.643772Z"
     }
    },
    "outputs": [
@@ -283,11 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:34.910217Z",
-     "start_time": "2023-12-15T09:45:34.702728Z"
+     "end_time": "2023-12-15T10:11:58.853849Z",
+     "start_time": "2023-12-15T10:11:58.646195Z"
     }
    },
    "outputs": [
@@ -315,11 +315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:35.111329Z",
-     "start_time": "2023-12-15T09:45:34.911943Z"
+     "end_time": "2023-12-15T10:11:59.051939Z",
+     "start_time": "2023-12-15T10:11:58.854549Z"
     }
    },
    "outputs": [],
@@ -331,11 +331,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:35.115843Z",
-     "start_time": "2023-12-15T09:45:35.111756Z"
+     "end_time": "2023-12-15T10:11:59.056131Z",
+     "start_time": "2023-12-15T10:11:59.052195Z"
     }
    },
    "outputs": [
@@ -359,11 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:35.120211Z",
-     "start_time": "2023-12-15T09:45:35.115272Z"
+     "end_time": "2023-12-15T10:11:59.057917Z",
+     "start_time": "2023-12-15T10:11:59.054863Z"
     }
    },
    "outputs": [
@@ -402,11 +402,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:35.925903Z",
-     "start_time": "2023-12-15T09:45:35.130457Z"
+     "end_time": "2023-12-15T10:11:59.892996Z",
+     "start_time": "2023-12-15T10:11:59.064103Z"
     }
    },
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "outputs": [
     {
      "name": "stdout",
@@ -466,14 +466,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:36.589310Z",
-     "start_time": "2023-12-15T09:45:35.924416Z"
+     "end_time": "2023-12-15T10:12:00.586313Z",
+     "start_time": "2023-12-15T10:11:59.897800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "outputs": [
     {
      "name": "stdout",
@@ -493,8 +493,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:36.703482Z",
-     "start_time": "2023-12-15T09:45:36.653822Z"
+     "end_time": "2023-12-15T10:12:00.701175Z",
+     "start_time": "2023-12-15T10:12:00.642884Z"
     }
    }
   },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "pred = Prediction(original_image)\n",
@@ -522,14 +522,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:37.913151Z",
-     "start_time": "2023-12-15T09:45:36.751932Z"
+     "end_time": "2023-12-15T10:12:01.950039Z",
+     "start_time": "2023-12-15T10:12:00.701352Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "dequantize = Quantizer(1, 10)\n",
@@ -539,14 +539,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:38.005441Z",
-     "start_time": "2023-12-15T09:45:37.970068Z"
+     "end_time": "2023-12-15T10:12:02.039302Z",
+     "start_time": "2023-12-15T10:12:01.950353Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "inv_pred = invert_image(image_data_dequantized)\n"
@@ -554,14 +554,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:38.162110Z",
-     "start_time": "2023-12-15T09:45:38.005987Z"
+     "end_time": "2023-12-15T10:12:02.205554Z",
+     "start_time": "2023-12-15T10:12:02.039547Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "outputs": [
     {
      "name": "stdout",
@@ -581,21 +581,63 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:38.286060Z",
-     "start_time": "2023-12-15T09:45:38.180799Z"
+     "end_time": "2023-12-15T10:12:02.330711Z",
+     "start_time": "2023-12-15T10:12:02.237220Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "outputs": [],
-   "source": [],
+   "source": [
+    "X = np.array([[[10, 13, 15, 18]]])\n",
+    "pred = Prediction(X)\n",
+    "pred_x = pred.predict_image()\n",
+    "quantize = Quantizer(1, 10)\n",
+    "image_data_quantized = ImageRaw.get_image_structure_empty()\n",
+    "quantize.quantize(pred_x, image_data_quantized)\n",
+    "dequantize = Quantizer(1, 10)\n",
+    "image_data_dequantized = ImageRaw.get_image_structure_empty()\n",
+    "dequantize.dequantize(image_data_quantized, image_data_dequantized)\n",
+    "inv_pred = invert_image(image_data_dequantized)"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-15T09:45:38.286415Z",
-     "start_time": "2023-12-15T09:45:38.284133Z"
+     "end_time": "2023-12-15T10:12:02.571769Z",
+     "start_time": "2023-12-15T10:12:02.329170Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 4 is out of bounds for axis 0 with size 4",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[52], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m### PAE\u001B[39;00m\n\u001B[1;32m      2\u001B[0m pae \u001B[38;5;241m=\u001B[39m Metrics(inv_pred, pred_x)\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mPae: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mpae\u001B[38;5;241m.\u001B[39mcalculate_pae()\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28mprint\u001B[39m(pae\u001B[38;5;241m.\u001B[39mPAE_data)\n",
+      "File \u001B[0;32m~/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/Metrics.py:46\u001B[0m, in \u001B[0;36mMetrics.calculate_pae\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     44\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m y \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39moriginal_image_rows):\n\u001B[1;32m     45\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m x \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39moriginal_image_columns):\n\u001B[0;32m---> 46\u001B[0m         value \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39moriginal_image[z][y][x] \u001B[38;5;241m-\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreconstructed_image\u001B[49m\u001B[43m[\u001B[49m\u001B[43mz\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43my\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mx\u001B[49m\u001B[43m]\u001B[49m\n\u001B[1;32m     47\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m max_value \u001B[38;5;241m==\u001B[39m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m     48\u001B[0m             max_value \u001B[38;5;241m=\u001B[39m value\n",
+      "\u001B[0;31mIndexError\u001B[0m: index 4 is out of bounds for axis 0 with size 4"
+     ]
+    }
+   ],
+   "source": [
+    "### PAE\n",
+    "pae = Metrics(inv_pred, pred_x)\n",
+    "print(f\"Pae: {pae.calculate_pae()}\")\n",
+    "print(pae.PAE_data)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-15T10:12:02.592359Z",
+     "start_time": "2023-12-15T10:12:02.574355Z"
     }
    }
   }
